fixed css wrap issue

--- a/src/components/content/content.style.css
+++ b/src/components/content/content.style.css
@@ -34,6 +34,7 @@
   display: flex;
   gap: 10px;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .content-box .cnt-container {
